--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,13 @@ name = "anthill-service-system"
 version = "0.1.0"
 authors = ["Vidrochka <Evgenuy1605@yandex.ru>"]
 edition = "2018"
+description = "Rust runtime service system manager with di integration"
+license = "MIT"
+homepage = "https://github.com/Vidrochka/anthill-service-system"
+repository = "https://github.com/Vidrochka/anthill-service-system"
+keywords = ["service", "service manager", "runtime", "manager", "system"]
 
 [dependencies]
-anthill-di = "*"
-async-trait = "*"
-log = "*"
-tokio = { version = "*", features = ["full"] }
-tokio-timer = "*"
-futures = "*"
+anthill-di = "0.1.7"
+async-trait = "0.1.51"
+tokio = { version = "1.12.0", features = ["full"] }
