--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "anthill-service-system"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Vidrochka <Evgenuy1605@yandex.ru>"]
 edition = "2018"
 description = "Rust runtime service system manager with di integration"
 license = "MIT"
 homepage = "https://github.com/Vidrochka/anthill-service-system"
 repository = "https://github.com/Vidrochka/anthill-service-system"
-keywords = ["service", "service-manager", "runtime", "manager", "system"]
+keywords = ["anthill", "service", "service-manager", "runtime", "manager", "system"]
 
 [dependencies]
 anthill-di = "0.1.7"
