--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "anthill-service-system"
-version = "1.0.0"
+version = "1.0.1"
 authors = ["Vidrochka <Evgenuy1605@yandex.ru>"]
 edition = "2018"
 description = "Rust runtime service system manager with di integration"
@@ -13,4 +13,9 @@ keywords = ["anthill", "service", "service-manager", "runtime", "manager"]
 anthill-di = "1.0.5"
 async-trait = "0.1.52"
 tokio = { version = "1.15.0", features = ["full"] }
+
 log = "0.4.14"
+
+serde = { version = "1.0.133", features = ["derive"] }
+serde_derive = "1.0.133"
+serde_json = "1.0.74"
