--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "anthill-service-system"
-version = "1.1.1"
+version = "1.2.3"
 authors = ["Vidrochka <Evgenuy1605@yandex.ru>"]
-edition = "2018"
+edition = "2021"
 description = "Rust runtime service system manager with di integration"
 license = "MIT"
 homepage = "https://github.com/Vidrochka/anthill-service-system"
@@ -10,9 +10,15 @@ repository = "https://github.com/Vidrochka/anthill-service-system"
 keywords = ["anthill", "service", "service-manager", "runtime", "manager"]
 
 [dependencies]
-anthill-di = "1.2.1"
-anthill-di-configuration-extension = "0.1.0"
-async-trait = "0.1.52"
+anthill-di = "1.2.3"
+anthill-di-derive = "1.2.3"
+anthill-di-configuration-extension = "1.2.5"
+
+serde = { version = "1.0.133", features = ["derive"] }
+#serde_with = "1.13.0"
+serde_json = "1.0.74"
+
+async-trait-with-sync = "0.1.36"
 tokio = { version = "1.15.0", features = ["full"] }
 thiserror = "1.0.30"
 log = "0.4.14"
